spade-tests/src/snapshots/spade_tests__integration__trait_tests__multiple_anonymous_impls_of_same_function_is_an_error.snap
---
source: spade-tests/src/integration.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: X already has a method named a
  ┌─ testinput:8:5
  │
4 │     fn a() -> bool {true}
  │     --------------------- Previous definition here
  ·
8 │     fn a() -> bool {false}
  │     ^^^^^^^^^^^^^^^^^^^^^^ Duplicate method


